--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,26 +8,18 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="{{ "/" | relative_url}}""#"><img src="/assets/img/logo_calliope_doku_de.png"></a>
+      <a class="navbar-brand" href="{{ '/' | relative_url}}"><img src="/assets/img/logo_calliope_doku_de.png"></a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
 
-        {% assign navigation_pages = site.html_pages | sort: 'navigation_weight' %}
-        {% for p in navigation_pages %}
-        {% if p.navigation_weight > 0 %}
-        <button type="button" class="btn btn-default navbar-btn"><a href="{{ p.url | relative_url }}">{{ p.title | escape }}</a></button>
-
-        {% endif %}
-        {% endfor %}
-
-
-      </ul>
-
-
-
+      {% assign navigation_pages = site.html_pages | sort: 'navigation_weight' %}
+      {% for p in navigation_pages %}
+      {% if p.navigation_weight > 0 %}
+        <a href="{{ p.url | relative_url }}"><button type="button" class="btn btn-default navbar-btn">{{ p.title | escape }}</button></a>
+      {% endif %}
+      {% endfor %}
 
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
