--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,12 +4,18 @@ layout: default
 
 <div class="home">
 
-
-  
   {{ content }}
 
+  <ul class="post-list">
+    {% for post in site.posts %}
+      <li>
+        <span class="post-meta">{{ post.date | date: "%b %-d, %Y" }}</span>
 
-
-
+        <h2>
+          <a class="post-link" href="{{ post.url | relative_url }}">{{ post.title | escape }}</a>
+        </h2>
+      </li>
+    {% endfor %}
+  </ul>
 
 </div>
